<resources>
    <string name="app_name">Scheduling Application</string>
    <string name="terms_button">List of Terms</string>
    <string name="courses_button">List of Courses</string>
    <string name="assessments_button">List of Assessments</string>
    <string name="no_terms">No Terms</string>
    <string name="no_courses">No Courses</string>
    <string name="add_term">Add Term</string>
    <string name="add_course">Add Course</string>
    <string name="add_assessment">Add Assessment</string>
    <string name="no_assessments">No Assessments</string>
    <string name="terms">Terms</string>
    <string name="refresh">Refresh</string>
    <string name="edit_assessment">Edit Assessment</string>
    <string name="edit_course">Edit Course</string>
    <string name="edit_term">Edit Term</string>
    <string name="title">Title:</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="title_of_term">Title of Term</string>
    <string name="term_start_date">Term Start Date</string>
    <string name="term_end_date">Term End Date</string>
    <string name="save_term">Save Term</string>
    <string name="delete_term">Delete Term</string>
    <string name="delete_all_courses_in_term">Delete All Courses in Term</string>
    <string name="course_end_date">Course End Date</string>
    <string name="course_start_date">Course Start Date</string>
    <string name="title_of_course">Title of Course</string>
    <string name="name">Name:</string>
    <string name="status">Status:</string>
    <string name="course_notes">Course Notes</string>
    <string name="save_course">Save Course</string>
    <string name="phone_number">Phone Number:</string>
    <string name="email">Email:</string>
    <string name="instructor_info">Instructor Info</string>
    <string name="instructor_email">Instructor Email</string>
    <string name="instructor_name">Instructor Name</string>
    <string name="instructor_phone_number">Phone Number</string>
    <string name="delete_all_terms">Delete All Terms</string>
    <string name="delete_course">Delete Course</string>
    <string name="delete_all_assessments_in_course">Delete All Assessments in Course</string>
    <string name="type">Type</string>
    <string name="assessment_end_date">Assessment End Date</string>
    <string name="assessment_start_date">Assessment Start Date</string>
    <string name="save_assessment">Save Assessment</string>
    <string name="title_of_assessment">Title of Assessment</string>
    <string name="textview">TextView</string>
    <string name="scheduling_application">Scheduling Application</string>

</resources>